--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #1a458b;
+    background-color: ##34124a;
     color: #333;
 }
 
@@ -36,7 +36,7 @@ nav .navbar-brand {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #4d86c7;
+    background-color: CCCC;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
@@ -44,7 +44,7 @@ nav .navbar-brand {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #530a98;
+    color: #956cbd;
 }
 
 #quiz-container {
@@ -63,7 +63,7 @@ h1 {
 #question {
     margin-bottom: 10px;
     font-size: 1.2em;
-    color: #530a98;
+    color: #956cbd;
 }
 
 #answers {
